# vulkan_on_the_way

./: CMakeLists.txt  main.cpp
bak/shaders_09~17/: vertex_shader.vert
bak/shaders_18~21/: fragment_shader.frag  vertex_shader.vert
font/: font_lishu_CN_base85.h  font_lishu_CN_nocompress.h  font_lishu_CN_nostatic.h
include/: command_buffer.h  depth_buffer.h  frame_buffer.h  graphic_pipeline.h  image_view.h  init_imgui.h  init_vk.h  init_window.h  logical_device_queue.h  physical_device_queue.h  render_loop.h  render_passes.h  surface.h  swapchain.h  texture.h  uniform_buffer.h  vaildation_layer.h  vertex_buffer.h  vk_instance.h  window.h
include/buffers/: buffers_operation.h
include/graphic_pipeline/: color_blending.h  depth_stencil.h  dynamic_state.h  fragment_shader.h  input_assembly.h  multi_sampling.h  rasterizer.h  utils.h  vertex_input.h  vertex_shader.h  viewport.h
include/interaction/: camera.h
shaders/: compile.sh  fragment_shader.frag  vertex_shader.vert
src/: command_buffer.cpp  depth_buffer.cpp  frame_buffer.cpp  graphic_pipeline.cpp  image_view.cpp  init_imgui.cpp  init_vk.cpp  init_window.cpp  logical_device_queue.cpp  physical_device_queue.cpp  render_loop.cpp  render_passes.cpp  surface.cpp  swapchain.cpp  texture.cpp  uniform_buffer.cpp  vaildation_layer.cpp  vertex_buffer.cpp  vk_instance.cpp
src/buffers/: buffers_operation.cpp
src/graphic_pipeline/: color_blending.cpp  depth_stencil.cpp  dynamic_state.cpp  fragment_shader.cpp  input_assembly.cpp  multi_sampling.cpp  rasterizer.cpp  vertex_input.cpp  vertex_shader.cpp  viewport.cpp
(+1 files in other folders)
